--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,7 @@
-name: CI/CD Pipeline
+name: Deploy to Firebase
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -13,41 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
+    - name: Check out the repository
+      uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+    - name: Install dependencies
+      run: npm install
 
-      - name: Install dependencies
-        run: npm install
+    - name: Build the project
+      run: npm run build
 
-      - name: Build project
-        run: npm run build
+    - name: Authenticate with Firebase
+      env:
+        FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+      run: |
+        echo "$FIREBASE_SERVICE_ACCOUNT" > firebase-service-account.json
+        firebase auth:import --account-key firebase-service-account.json
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build 
-    if: github.ref == 'refs/heads/main' 
-
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
-
-      - name: Authenticate to Firebase
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: firebase auth:login:ci --token "$FIREBASE_TOKEN"
-
-      - name: Deploy to Firebase
-        run: firebase deploy --only hosting
+    - name: Deploy to Firebase
+      run: firebase deploy --only hosting
