--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Build the project
       run: npm run build
 
+    - name: Install Firebase CLI
+      run: npm install -g firebase-tools
+
     - name: Authenticate with Firebase
       env:
         FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
